build/log/idf_py_stderr_output_17055
Command: make -j 10 flash
/home/fus/Documents/DO-AN-02/main/do-an-02.c:8:17: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'oledFlag'
    8 | volatile flag_t oledFlag            = 0;
      |                 ^~~~~~~~
In file included from /home/fus/Documents/DO-AN-02/main/../comDriver/oled128x64/oled128x64.h:4,
                 from /home/fus/Documents/DO-AN-02/main/sender.h:3,
                 from /home/fus/Documents/DO-AN-02/main/do-an-02.c:2:
/home/fus/Documents/DO-AN-02/main/../comDriver/oled128x64/../i2c/i2c.h:31:23: warning: 'i2cHandleSDAIsr' defined but not used [-Wunused-function]
   31 | static void IRAM_ATTR i2cHandleSDAIsr(void* pvI2CDev){
      |                       ^~~~~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/main/../comDriver/oled128x64/../i2c/i2c.h:22:23: warning: 'i2cHandleSCLIsr' defined but not used [-Wunused-function]
   22 | static void IRAM_ATTR i2cHandleSCLIsr(void* pvI2CDev){
      |                       ^~~~~~~~~~~~~~~
make[3]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/do-an-02.c.obj] Error 1
make[2]: *** [CMakeFiles/Makefile2:7426: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:3122: CMakeFiles/flash.dir/rule] Error 2
make: *** [Makefile:208: flash] Error 2
